# parallel-tarjan

./: CMakeLists.txt  Pipfile  README.md  measures.bash  script.py
include/: SCC.h  SccStack.h  TArray.h  THTopen.h  TInfo_KV.h  graph.h  node.h  stack.h  tarjan.h
measures/: extract.py
measures/size24000/OPT_0/: SIZE-24000-NP-00-OPT0.csv  SIZE-24000-NP-01-OPT0.csv  SIZE-24000-NP-02-OPT0.csv  SIZE-24000-NP-04-OPT0.csv  SIZE-24000-NP-08-OPT0.csv  finalTable-SIZE24000OPT0.csv
measures/size24000/OPT_1/: SIZE-24000-NP-00-OPT1.csv  SIZE-24000-NP-01-OPT1.csv  SIZE-24000-NP-02-OPT1.csv  SIZE-24000-NP-04-OPT1.csv  SIZE-24000-NP-08-OPT1.csv  finalTable-SIZE24000OPT1.csv
measures/size24000/OPT_2/: SIZE-24000-NP-00-OPT2.csv  SIZE-24000-NP-01-OPT2.csv  SIZE-24000-NP-02-OPT2.csv  SIZE-24000-NP-04-OPT2.csv  SIZE-24000-NP-08-OPT2.csv  finalTable-SIZE24000OPT2.csv
measures/size24000/OPT_3/: SIZE-24000-NP-00-OPT3.csv  SIZE-24000-NP-01-OPT3.csv  SIZE-24000-NP-02-OPT3.csv  SIZE-24000-NP-04-OPT3.csv  SIZE-24000-NP-08-OPT3.csv  finalTable-SIZE24000OPT3.csv
measures/size32000/OPT_0/: SIZE-32000-NP-00-OPT0.csv  SIZE-32000-NP-01-OPT0.csv  SIZE-32000-NP-02-OPT0.csv  SIZE-32000-NP-04-OPT0.csv  SIZE-32000-NP-08-OPT0.csv  finalTable-SIZE32000OPT0.csv
measures/size32000/OPT_1/: SIZE-32000-NP-00-OPT1.csv  SIZE-32000-NP-01-OPT1.csv  SIZE-32000-NP-02-OPT1.csv  SIZE-32000-NP-04-OPT1.csv  SIZE-32000-NP-08-OPT1.csv  finalTable-SIZE32000OPT1.csv
measures/size32000/OPT_2/: SIZE-32000-NP-00-OPT2.csv  SIZE-32000-NP-01-OPT2.csv  SIZE-32000-NP-02-OPT2.csv  SIZE-32000-NP-04-OPT2.csv  SIZE-32000-NP-08-OPT2.csv  finalTable-SIZE32000OPT2.csv
measures/size32000/OPT_3/: SIZE-32000-NP-00-OPT3.csv  SIZE-32000-NP-01-OPT3.csv  SIZE-32000-NP-02-OPT3.csv  SIZE-32000-NP-04-OPT3.csv  SIZE-32000-NP-08-OPT3.csv  finalTable-SIZE32000OPT3.csv
measures/size41000/OPT_0/: SIZE-41000-NP-00-OPT0.csv  SIZE-41000-NP-01-OPT0.csv  SIZE-41000-NP-02-OPT0.csv  SIZE-41000-NP-04-OPT0.csv  SIZE-41000-NP-08-OPT0.csv  finalTable-SIZE41000OPT0.csv
measures/size41000/OPT_1/: SIZE-41000-NP-00-OPT1.csv  SIZE-41000-NP-01-OPT1.csv  SIZE-41000-NP-02-OPT1.csv  SIZE-41000-NP-04-OPT1.csv  SIZE-41000-NP-08-OPT1.csv  finalTable-SIZE41000OPT1.csv
measures/size41000/OPT_2/: SIZE-41000-NP-00-OPT2.csv  SIZE-41000-NP-01-OPT2.csv  SIZE-41000-NP-02-OPT2.csv  SIZE-41000-NP-04-OPT2.csv  SIZE-41000-NP-08-OPT2.csv  finalTable-SIZE41000OPT2.csv
measures/size41000/OPT_3/: SIZE-41000-NP-00-OPT3.csv  SIZE-41000-NP-01-OPT3.csv  SIZE-41000-NP-02-OPT3.csv  SIZE-41000-NP-04-OPT3.csv  SIZE-41000-NP-08-OPT3.csv  finalTable-SIZE41000OPT3.csv
measures/size48000/OPT_0/: SIZE-48000-NP-00-OPT0.csv  SIZE-48000-NP-01-OPT0.csv  SIZE-48000-NP-02-OPT0.csv  SIZE-48000-NP-04-OPT0.csv  SIZE-48000-NP-08-OPT0.csv  finalTable-SIZE48000OPT0.csv
measures/size48000/OPT_1/: SIZE-48000-NP-00-OPT1.csv  SIZE-48000-NP-01-OPT1.csv  SIZE-48000-NP-02-OPT1.csv  SIZE-48000-NP-04-OPT1.csv  SIZE-48000-NP-08-OPT1.csv  finalTable-SIZE48000OPT1.csv
measures/size48000/OPT_2/: SIZE-48000-NP-00-OPT2.csv  SIZE-48000-NP-01-OPT2.csv  SIZE-48000-NP-02-OPT2.csv  SIZE-48000-NP-04-OPT2.csv  SIZE-48000-NP-08-OPT2.csv  finalTable-SIZE48000OPT2.csv
measures/size48000/OPT_3/: SIZE-48000-NP-00-OPT3.csv  SIZE-48000-NP-01-OPT3.csv  SIZE-48000-NP-02-OPT3.csv  SIZE-48000-NP-04-OPT3.csv  SIZE-48000-NP-08-OPT3.csv  finalTable-SIZE48000OPT3.csv
src/: SCC.c  SccStack.c  TArray.c  THTopen.c  TInfo_KV.c  graph.c  main.c  main_seq.c  node.c  stack.c  tarjan.c
test/: test.c
